<resources>
    <string name="app_name">Frequaw setting</string>
    <string name="app_name_full">Frequently Used App Widget</string>
    <string name="app_name_only" translatable="false">Frequaw</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="ignore">Ignore</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="save_n_close">Save &amp; close</string>
    <string name="open_default_setting">Open default setting</string>
    <string name="reset_to_default_setting">Reset to default</string>
    <string name="reset_to_default_setting_confirm_pd">Do you want to reset settings of widget %d to the default setting? This cannot undo.</string>
    <string name="default_setting">Default setting</string>
    <string name="erase_this_widget_setting">Erase this widget\'s setting</string>
    <string name="erase_this_widget_setting_confirm_pd">Do you want to erase settings of widget %d? After erasing, this widget will follow the default setting. This cannot undo.</string>
    <string name="widget_pd">Widget(%d)</string>
    <string name="this_widget_following_default">This widget follows the default setting.</string>
    <string name="create_new_setting">Create this widget setting</string>
    <string name="add_new_widget_pd">Add new widget %d</string>
    <string name="header_app_list">App List</string>
    <string name="header_badge">Badge</string>
    <string name="header_visualization">Visual customization</string>
    <string name="header_visualization_advanced">Visual customization(Advanced)</string>
    <string name="header_general">General</string>
    <string name="app_list_app_list">Filter apps</string>
    <string name="app_list_app_list_desc">Set the filtering mode, and select apps to be hidden or shown.</string>
    <string name="app_list_sort_method">Sorting method</string>
    <string name="app_list_sort_method_latest">Sort by app launch time</string>
    <string name="app_list_sort_method_frequently">Sort by frequently launched</string>
    <string name="app_list_sort_direction">Sorting direction</string>
    <string name="app_list_sort_direction_lt">Left Top</string>
    <string name="app_list_sort_direction_rt">Right Top</string>
    <string name="app_list_sort_direction_lb">Left Bottom</string>
    <string name="app_list_sort_direction_rb">Right Bottom</string>
    <string name="app_list_show_zero_launched">Show app icons which are never launched.</string>
    <string name="app_list_show_zero_launched_desc_on">Never launched app icons are also appeared in the widget randomly.</string>
    <string name="app_list_show_zero_launched_desc_off">Never launched app icons are disappeared in the widget.</string>
    <string name="app_list_pin_app">Pin apps</string>
    <string name="app_list_pin_app_desc">Select apps to pin the first of the list.</string>
    <string name="app_list_last_icon_setting">Add the setting icon</string>
    <string name="app_list_last_icon_setting_desc">Make the last icon of the widget the icon that enters the settings.</string>
    <string name="sorting_method_frequently">By app launching frequently</string>
    <string name="sorting_method_time">By last app launched time</string>
    <string name="sorting_direction_tl">Top Left</string>
    <string name="sorting_direction_tr">Top Right</string>
    <string name="sorting_direction_bl">Bottom Left</string>
    <string name="sorting_direction_br">Bottom Right</string>
    <string name="sorting_direction_rtl_desc">This setting is not affected by RTL layout.</string>
    <string name="badge_enable_badge">Show badge</string>
    <string name="badge_show_num">Show numbers in badges</string>
    <string name="badge_show_num_desc_on">Numbers are shown in badges.</string>
    <string name="badge_show_num_desc_off">Only dots are shown.</string>
    <string name="badge_color">Badge color</string>
    <string name="badge_text_color">Text color</string>
    <string name="visual_title_visible">Title bar</string>
    <string name="visual_title_visible_desc_on">Title bar is shown at the widget.</string>
    <string name="visual_title_visible_desc_off">Title bar is hidden at the widget.</string>
    <string name="visual_title_update_time_visible">Show updated time</string>
    <string name="visual_title_update_time_visible_desc_on">Last updated time is shown at the title of the widget.</string>
    <string name="visual_title_update_time_visible_desc_off">Last updated time is hidden at the title of the widget.</string>
    <string name="visual_title_text">Title text</string>
    <string name="visual_title_text_desc">Set the text that is displayed in the title area.</string>
    <string name="visual_title_text_empty">(Empty)</string>
    <string name="visual_advanced_enabled">Advanced widget layout setting</string>
    <string name="visual_advanced_enabled_desc_on">You can set padding values manually.</string>
    <string name="visual_advanced_enabled_desc_off">Padding values are adjust automatically by app icon size.</string>
    <string name="visual_icon_style">App icon style</string>
    <string name="visual_icon_style_desc">Select app icon shape or apply the icon pack.</string>
    <string name="visual_icon_size">App icon size</string>
    <string name="visual_icon_gap">Gap size between icons</string>
    <string name="visual_icon_gap_set_separately">Set horizontal/vertical gap between app icons separately</string>
    <string name="visual_icon_gap_horizontal_margin">Horizontal gap size between app icons</string>
    <string name="visual_icon_gap_vertical_margin">Vertical gap size between app icons</string>
    <string name="visual_list_margin_set_separately">Set app list horizontal/vertical padding separately</string>
    <string name="visual_list_margin">App list padding minimum size</string>
    <string name="visual_list_horizontal_margin">App list horizontal padding minimum size</string>
    <string name="visual_list_vertical_margin">App list vertical padding minimum size</string>
    <string name="visual_list_vertical_margin_if_title_only_bottom_desc">If title bar is enabled, top padding is not applied.</string>
    <string name="visual_list_about_margin">About the minimum size of list padding</string>
    <string name="visual_list_about_margin_desc">This setting is about the size empty space of Widget\'s edge area.\n Since this setting sets the \"minimum\" size of the space, so the actual area size could be wider than the value set here by other settings(app icon size, gap size between icons, etc.).</string>
    <string name="visual_bg_color">Background color</string>
    <string name="visual_bg_color_dark">Background color in Dark mode</string>
    <string name="visual_bg_corner_radius">Background corner radius</string>
    <string name="visual_show_app_name">Show app name</string>
    <string name="visual_app_name_size">App name text size</string>
    <string name="visual_app_name_margin">Gap size between icon and app name text</string>
    <string name="visual_app_name_color">App name &amp; text color</string>
    <string name="visual_app_name_color_dark">App name &amp; text color in Dark mode</string>
    <string name="visual_app_name_bg">App name background color</string>
    <string name="visual_set_dark_mode_color">Set colors for Dark mode</string>
    <string name="general_manage_pro_mode">Manage Pro-Mode</string>
    <string name="general_detect_mode">Sort apps by</string>
    <string name="general_detect_mode_accessibility">App launching count(Using Accessibility service)</string>
    <string name="general_detect_mode_usage_stats">App usage time (Using Usage stats information)</string>
    <string name="general_reset_app_list">Clear all apps launch counts that collected by Frequaw</string>
    <string name="general_reset_app_each">Clear each app launch history</string>
    <string name="general_reset_app_list_warning">All apps\' launch counts that Frequaw has collected will be cleared and reset. This can\'t be undo. Continue?</string>
    <string name="general_reset_app_list_done">App launch history has been cleared.</string>
    <string name="general_set_launcher_package_name">Set the home launcher package name manually</string>
    <string name="general_set_launcher_package_name_desc">If the activiated home launcher\'s package name is not the same as default, please enter the home launcher\'s package name that is currently activated. In most cases, you do not need to set this setting.</string>
    <string name="general_use_original_quality_icon">Use Original-quality icons</string>
    <string name="general_use_original_quality_icon_desc">NOT RECOMMENDED:\nEnable this to not downsize the image of app icons in the widget. This option will increase the quality of icons but may cause the crash of the app, widget, and service.</string>
    <string name="general_remove_every_widget_settings">Remove every widget setting</string>
    <string name="general_remove_every_widget_settings_desc">Remove every widget setting and make all widgets follow the default settings.</string>
    <string name="general_remove_every_widget_settings_confirm">This will erase all widget-specification settings and make all widgets follow the default settings. This cannot be undone. Do you want to proceed this?</string>
    <string name="general_accessibility">Accessibility service grant state</string>
    <string name="general_accessibility_desc">To sort by app launch count, accessibility service permission is required to detect app launch.\nIf permission is granted, the widget will be updated immediately when returning to the home screen.</string>
    <string name="general_battery_optimization">Battery optimization disabled state</string>
    <string name="general_battery_optimization_desc">Disabling it could make Frequaw more stable.</string>
    <string name="general_usage_stats">Usage stats permission state</string>
    <string name="general_usage_stats_desc">To sort apps by usage time, usage stats permission is required to get apps usage information.</string>
    <string name="general_export_import_setting">Export &amp; Import setting</string>
    <string name="general_export_import_setting_desc">You can export the currently configured Frequaw settings and the app launch history that Frequaw has collected, or import the settings and history that have been exported.</string>
    <string name="general_export_import_setting_export">Export</string>
    <string name="general_export_import_setting_import">Import</string>
    <string name="general_export_import_setting_fail_to_export">Export canceled or failed.</string>
    <string name="general_export_import_setting_fail_to_import">Import canceled or failed.</string>
    <string name="general_export_import_setting_import_double_check">Are you sure to import the setting? This will overwrite current settings and app launched counts.</string>
    <string name="general_export_import_exported_done">The setting has been exported.</string>
    <string name="widget_accessibility_service_is_not_running">Frequaw accessibility service is not running.</string>
    <string name="widget_accessibility_service_is_not_running_desc">Accessibility service should be turned on to save app launching events. </string>
    <string name="battery_optimization_disable_guide">Battery optimization could affect to Frequaw.</string>
    <string name="battery_optimization_disable_guide_desc">Disabling it could make Frequaw working more stable.</string>
    <string name="usage_stats_permission_not_granted">Usage stats access permission is not granted to Frequaw.</string>
    <string name="tutorial_close">Exit tutorial</string>
    <string name="tutorial_prev">Previous</string>
    <string name="tutorial_next">Next</string>
</resources>