<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.TutorialActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_tutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_finish_tutorial"/>

    <Button
        android:id="@+id/btn_prev_tutorial"
        android:layout_width="0dp"
        android:maxWidth="@dimen/tutorial_btn_width"
        android:layout_height="@dimen/tutorial_btn_height"
        android:layout_margin="@dimen/tutorial_btn_margin"
        android:text="@string/tutorial_prev"
        android:textSize="@dimen/tutorial_btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_finish_tutorial"/>

    <Button
        android:id="@+id/btn_next_tutorial"
        android:layout_width="0dp"
        android:maxWidth="@dimen/tutorial_btn_width"
        android:layout_height="@dimen/tutorial_btn_height"
        android:layout_margin="@dimen/tutorial_btn_margin"
        android:text="@string/tutorial_next"
        android:textSize="@dimen/tutorial_btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_finish_tutorial"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_finish_tutorial"
        android:layout_width="0dp"
        android:maxWidth="@dimen/tutorial_btn_width"
        android:layout_height="@dimen/tutorial_btn_height"
        android:layout_margin="@dimen/tutorial_btn_margin"
        android:text="@string/tutorial_close"
        android:textSize="@dimen/tutorial_btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev_tutorial"
        app:layout_constraintEnd_toStartOf="@id/btn_next_tutorial"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_tutorial_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_finish_tutorial"
        app:layout_constraintBottom_toBottomOf="@id/btn_finish_tutorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>